// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text renders a small text component 1`] = `
<Text
  secondary={false}
  size="small"
  tagName="span"
  weight="thin"
>
  <styled.span
    as="span"
    secondary={false}
    size="small"
    weight="thin"
  >
    <span
      className="sc-AykKC gQUtGu"
      size="small"
    >
      Hello Small Span
    </span>
  </styled.span>
</Text>
`;

exports[`Text renders a tiny text component 1`] = `
<Text
  secondary={false}
  size="tiny"
  tagName="span"
  weight="thin"
>
  <styled.span
    as="span"
    secondary={false}
    size="tiny"
    weight="thin"
  >
    <span
      className="sc-AykKC dIgvJF"
      size="tiny"
    >
      Hello Tiny Span
    </span>
  </styled.span>
</Text>
`;

exports[`Text should render as a span 1`] = `
<Text
  secondary={false}
  size="medium"
  tagName="span"
  weight="thin"
>
  <styled.span
    as="span"
    secondary={false}
    size="medium"
    weight="thin"
  >
    <span
      className="sc-AykKC buJqJu"
      size="medium"
    >
      Hello Span
    </span>
  </styled.span>
</Text>
`;
